my-company-bundle/0.0.2/README.md
# my-company-bundle

Generated by SUSE AI Factory

## Metadata
- **Name**: my-company-bundle
- **Version**: 0.0.2
- **Description**: This is an intial bundle with NVIDIA and SUSE components
- **Support**: opensource
- **Tier**: certified
- **Status**: new
- **Category**: Inference

## Authors
- alessandro.festa1@suse.com (Owner)

## Stack Composition
This stack includes the following components:

- **OpenSearch** (opensearch): OpenSearch is an open-source, enterprise-grade search and observability suite that brings order to unstructured data at scale. (Version: )
- **** (google-gemma-3-1b-it): Inference model: google/gemma-3-1b-it (Version: )

## Installation
To install this stack on your Kubernetes cluster, ensure you have Helm installed and run:

```bash
helm upgrade --install my-company-bundle ./chart -n my-company-bundle --create-namespace
```

## Upgrade
To upgrade an existing installation with new values or a newer version of the chart:

```bash
helm upgrade my-company-bundle ./chart -n my-company-bundle
```

## Teardown
To remove the stack and all its components from your cluster:

```bash
helm uninstall my-company-bundle -n my-company-bundle
```
